        behaviour, run '%hist -n' (native mode).
        
        * split ipy_stock_completers.py to ipy_stock_completers.py and
        ipy_app_completers.py. Stock completers (%cd, import, %run) are now
        installed as default.
        
        * sh profile now installs ipy_signals.py, for (hopefully) better ctrl+c
        handling.
	
2007-05-23  Ville Vainio  <vivainio@gmail.com>

	* macro.py: %store uses __getstate__ properly
	
	* exesetup.py: added new setup script for creating
	standalone IPython executables with py2exe (i.e.
	no python installation required).
	
	* Removed ipythonrc-scipy, ipy_profile_scipy.py takes
	its place.
        
        * rlineimpl.py, genutils.py (get_home_dir): py2exe support
	
2007-05-21  Ville Vainio  <vivainio@gmail.com>

	* platutil_win32.py (set_term_title): handle
	failure of 'title' system call properly.

2007-05-17  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py: Fix xrepr for ifiles.
	(Bug detected by Paul Mueller).

2007-05-16  Ville Vainio  <vivainio@gmail.com>

	* ipy_profile_sci.py, ipython_win_post_install.py: Create
	new "sci" profile, effectively a modern version of the old
	"scipy" profile (which is now slated for deprecation).

2007-05-15  Ville Vainio  <vivainio@gmail.com>

	* pycolorize.py, pycolor.1: Paul Mueller's patches that
	make pycolorize read input from stdin when run without arguments.
	
	* Magic.py: do not require 'PATH' in %rehash/%rehashx. Closes #155
	
	* ipy_rehashdir.py: rename ext_rehashdir to ipy_rehashdir, import
	it in sh profile (instead of ipy_system_conf.py).

	* Magic.py, ipy_rehashdir.py, ipy_profile_sh.py: System command
	aliases are now lower case on windows (MyCommand.exe => mycommand).
	
	* macro.py, ipapi.py, iplib.py, Prompts.py: Macro system rehaul.
	Macros are now callable objects that inherit from ipapi.IPyAutocall,
	i.e. get autocalled regardless of system autocall setting.

2007-05-10  Fernando Perez  <Fernando.Perez@colorado.edu>
